--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thiệp của daddy 14/3</title>
 
+    <link rel="stylesheet" href="style.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
       rel="stylesheet"
@@ -18,81 +19,7 @@
   </head>
   <body>
     <style>
-      :root {
-        font-family: "Montserrat", sans-serif;
-        font-size: large;
-        line-height: 1.5rem;
-        color: white;
-        font-weight: 500;
-      }
-
-      body {
-        background-image: url("assets/image/background.JPG");
-        background-repeat: no-repeat;
-        background-size: cover;
-      }
-
-      .letter-container {
-        display: flex;
-        margin: 2rem 10rem;
-        flex-direction: column;
-        align-items: center;
-        border-radius: 1rem;
-        padding: 1rem;
-        background-color: #99b79d;
-      }
-
-      .letter-container div {
-        margin: 1rem 0;
-        display: inherit;
-        flex-direction: column;
-        width: 560px;
-      }
-
-      .alg-media {
-        width: 100% !important;
-        justify-content: center;
-        position: relative;
-        overflow: hidden;
-        padding-top: 56.25%;
-      }
-
-      .alg-media iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
-      }
-
-      .avatar {
-        width: 400px;
-        height: 400px;
-        border-radius: 50%;
-        object-fit: cover;
-      }
-
-      .img-moment {
-        width: 90%;
-      }
-
-      @media screen and (max-width: 400px) {
-        .letter-container {
-          margin: 5px 10px;
-          width: 300px;
-        }
-
-        .avatar {
-          width: 200px;
-          height: 200px;
-        }
-
-        .letter-container div {
-          width: 100%;
-        }
-      }
+     
     </style>
 
     <div class="letter-container">
